--- a/.github/workflows/imagebuilder.yaml
+++ b/.github/workflows/imagebuilder.yaml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Update the deployment manifest file
         run: |
+          cd app.api/k8s
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           kustomize edit set image quyencl91/max-weather=quyencl91/max-weather:${{ github.sha }}
