update config to allow github action udpate file

--- a/.github/workflows/imagebuilder.yaml
+++ b/.github/workflows/imagebuilder.yaml
@@ -49,4 +49,4 @@ jobs:
           git config user.email "actions@github.com"
           kustomize edit set image quyencl91/max-weather=quyencl91/max-weather:${{ github.sha }}
           git commit -am "Update image to ${{ github.sha }}"
-          git push
+          git push https://x-access-token:${{ secrets.GH_ACTION_PAT }}@github.com/quyennguyenvan/demo-argocd.git
