--- a/app.api/k8s/deployment.yaml
+++ b/app.api/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: backend-api
     spec:
       imagePullSecrets:
-        - name: docker_hub_pull
+        - name: dockerhubpull
       containers:
         - name: backend-api
           image: quyencl91/max-weather:ebac77b648dadb7fe38f8493b64ddf6a5d5cf2c0
