update config for push

--- a/.github/workflows/imagebuilder.yaml
+++ b/.github/workflows/imagebuilder.yaml
@@ -55,6 +55,7 @@ jobs:
           kustomize edit set image quyencl91/max-weather=quyencl91/max-weather:${{ github.sha }}
           cat kustomization.yaml
           cd ../..
+          git pull 
           git add .
           git commit -am "Update image to ${{ github.sha }}"
           git push https://x-access-token:${{ secrets.GH_ACTION_PAT }}@github.com/quyennguyenvan/demo-argocd.git
