--- a/app.api/k8s/kustomization.yaml
+++ b/app.api/k8s/kustomization.yaml
@@ -1,9 +1,12 @@
-resources:
-- deployment.yaml
-
-images:
-- name: quyencl91/max-weather
-  newName: quyencl91/max-weather
-  newTag: d855d373486c4fd9fa993935be793fcc6a726c43
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+resources:
+  - namespace.yaml
+  - deployment.yaml
+  - service.yaml
+
+images:
+  - name: quyencl91/max-weather
+    newName: quyencl91/max-weather
+    newTag: d855d373486c4fd9fa993935be793fcc6a726c43
