--- a/app.api/k8s/manifest.yaml
+++ b/app.api/k8s/manifest.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: max-weather-dev
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: svc-backend-api
