--- a/.github/workflows/imagebuilder.yaml
+++ b/.github/workflows/imagebuilder.yaml
@@ -34,11 +34,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -f app.api/app.dockerfile  -t quyencl91/max-weather:${{ github.sha }} .
+          docker build -f app.api/app.dockerfile  -t ptd0409/td-argocd:${{ github.ref_name }} .
 
       - name: Push Docker image to Docker hub
         run: |
-          docker push quyencl91/max-weather:${{ github.sha }}
+          docker push ptd0409/td-argocd:${{ github.ref_name }}
 
   update_deployment:
     needs: build
@@ -50,12 +50,12 @@ jobs:
       - name: Update the deployment manifest file
         run: |
           cd app.api/k8s
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          kustomize edit set image quyencl91/max-weather=quyencl91/max-weather:${{ github.sha }}
+          git config user.name "ptd0409"
+          git config user.email "leonardcurryst@gmail.com"
+          kustomize edit set image ptd0409/td-argocd:${{ github.ref_name }}
           cat kustomization.yaml
           cd ../..
           git pull 
           git add .
-          git commit -am "Update image to ${{ github.sha }}"
-          git push https://x-access-token:${{ secrets.GH_ACTION_PAT }}@github.com/quyennguyenvan/demo-argocd.git
+          git commit -am "Update image to ${{ github.ref_name }}"
+          git push https://x-access-token:${{ secrets.GH_ACTION_PAT }}@github.com/ptd0409/ArgoCD.git
