--- a/app.api/k8s/kustomization.yaml
+++ b/app.api/k8s/kustomization.yaml
@@ -2,11 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - namespace.yaml
-  - deployment.yaml
-  - service.yaml
+- namespace.yaml
+- deployment.yaml
+- service.yaml
 
 images:
-  - name: ptd0409/td-argocd:main
-    newName: ptd0409/demo-argocd:main
-    newTag: main
+- name: ptd0409/td-argocd
+  newTag: main
+- name: ptd0409/td-argocd:main
+  newName: ptd0409/demo-argocd:main
+  newTag: main
