--- a/.github/workflows/imagebuilder.yaml
+++ b/.github/workflows/imagebuilder.yaml
@@ -52,10 +52,13 @@ jobs:
           cd app.api/k8s
           git config user.name "ptd0409"
           git config user.email "leonardcurryst@gmail.com"
-          kustomize edit set image ptd0409/td-argocd:${{ github.ref_name }}
-          cat kustomization.yaml
-          cd ../..
-          git pull 
-          git add .
-          git commit -am "Update image to ${{ github.ref_name }}"
-          git push https://x-access-token:${{ secrets.GH_ACTION_PAT }}@github.com/ptd0409/ArgoCD.git
+          kustomize edit set image ptd0409/td-argocd=ptd0409/td-argocd:${{ github.ref_name }}
+          if ! git diff --quiet; then
+            cat kustomization.yaml
+            git pull
+            git add .
+            git commit -m "Update image to ${{ github.ref_name }}"
+            git push https://x-access-token:${{ secrets.GH_ACTION_PAT }}@github.com/ptd0409/ArgoCD.git
+          else
+            echo "No changes to commit."
+          fi
