Update image to main

--- a/app.api/k8s/kustomization.yaml
+++ b/app.api/k8s/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 
 images:
 - name: ptd0409/td-argocd
+  newName: ptd0409/td-argocd
   newTag: main
 - name: ptd0409/td-argocd:main
   newName: ptd0409/demo-argocd:main
