--- a/app.tf/dev.conf
+++ b/app.tf/dev.conf
@@ -1,5 +1,5 @@
-bucket  = "infraskynettf"
+bucket  = "ptdbucket"
 key     = "skynet-tf.tfstate"
-region  = "us-east-1"
+region  = "ap-southeast-1"
 encrypt = true  
-profile = "quyennv-devops"
+profile = "default"
